tests/toy/neg/001573_mutation.toylang
program a = { while else do sleep; } .
